refactor: Replace Paths.get with Path.of